# GenAI4miniCPMs

./: README.md
miniCPM3-4B/: CMakeLists.txt  README.md  main.cpp
visual_language_chat/: CMakeLists.txt  README.md  visual_language_chat.cpp
visual_language_chat/genai_runtime/lib/: openvino_genai.lib  openvino_tokenizers.lib
